--- a/cart.html
+++ b/cart.html
@@ -94,7 +94,7 @@ $(() => {
 	
 });
 
-// deleteCartk関数を定義
+// deleteCart関数を定義
 let deleteCart = (checkedList, checkedIdList) => {
 	// 非同期通信を行う
 	$.ajax({
